--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @font-face {
   font-family: "GaramondRegular";
   src: url("assets/fonts/EBGaramond-Regular.ttf") format("truetype");
+  font-display: swap;
 }
 
 /**
@@ -12,6 +13,7 @@
 @font-face {
   font-family: "IMFellDWPica";
   src: url("assets/fonts/IMFellDWPica-Regular.ttf") format("truetype");
+  font-display: swap;
 }
 
 /**
