--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @font-face {
   font-family: "GaramondRegular";
   src: url("assets/fonts/EBGaramond-Regular.ttf") format("truetype");
-  font-display: fallback;
+  font-display: optional;
 }
 
 /**
@@ -13,7 +13,7 @@
 @font-face {
   font-family: "IMFellDWPica";
   src: url("assets/fonts/IMFellDWPica-Regular.ttf") format("truetype");
-  font-display: fallback;
+  font-display: optional;
 }
 
 /**
