--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @font-face {
   font-family: "GaramondRegular";
   src: url("assets/fonts/EBGaramond-Regular.ttf") format("truetype");
-  font-display: swap;
+  font-display: optional;
 }
 
 /**
@@ -13,7 +13,7 @@
 @font-face {
   font-family: "IMFellDWPica";
   src: url("assets/fonts/IMFellDWPica-Regular.ttf") format("truetype");
-  font-display: swap;
+  font-display: optional;
 }
 
 /**
@@ -43,4 +43,47 @@ body {
  */
 #text-input::placeholder {
   opacity: 0.8;
+}
+
+#font-garamondRegularLord,
+#font-garamondRegularRings {
+  font-family: "GaramondRegular", serif;
+}
+
+#font-imFellDWPica {
+  font-family: "IMFellDWPica", serif;
+}
+
+#garamondRegular-whiteAI,
+#garamondRegular-whiteGithub {
+  color: white;
+  font-family: "GaramondRegular", serif;
+}
+
+#garamondRegular-title {
+  font-family: "GaramondRegular, serif";
+  font-size: 2rem;
+  margin-bottom: "-1rem";
+}
+
+#garamondRegular-title2 {
+  font-family: "GaramondRegular, serif";
+  font-size: 2rem;
+  margin-bottom: "-1rem";
+}
+
+#iIMFellDWPica-h2 {
+  font-family: "IMFellDWPica", serif;
+  font-size: 3rem;
+}
+
+#text-input {
+  color: white;
+  font-family: "GaramondRegular", serif;
+  font-size: 1.5rem; /* 24px */
+  line-height: 2rem; /* 32px */
+}
+
+#iIMFellDWPica-h3 {
+  font-family: "IMFellDWPica", serif;
 }
